# LLM-multi-agents-with-MCP

./: client.py  pyproject.toml  server.py
